add support for nested openLevel